--- a/src/components/MarkdownIt.css
+++ b/src/components/MarkdownIt.css
@@ -35,26 +35,26 @@ code, kbd, pre, samp {
   padding: 16px;
 }
 
-  #markdown pre::-webkit-scrollbar {
-    height: 6px;
-  }
+#markdown pre::-webkit-scrollbar {
+  height: 6px;
+}
 
-  #markdown pre::-webkit-scrollbar-button, #markdown pre::-webkit-scrollbar-track {
-    display: none;
-  }
+#markdown pre::-webkit-scrollbar-button, #markdown pre::-webkit-scrollbar-track {
+  display: none;
+}
 
-  #markdown pre::-webkit-scrollbar-button {
-    display: none;
-  }
+#markdown pre::-webkit-scrollbar-button {
+  display: none;
+}
 
-  #markdown pre::-webkit-scrollbar-track-piece {
-    background: rgba(255, 255, 255, 0.7);
- }
+#markdown pre::-webkit-scrollbar-track-piece {
+  background: rgba(255, 255, 255, 0.7);
+}
 
-  #markdown pre::-webkit-scrollbar-thumb {
-    background: rgba(140, 140, 140, 0.25);
-    border-radius: 4px;
-  }
+#markdown pre::-webkit-scrollbar-thumb {
+  background: rgba(140, 140, 140, 0.25);
+  border-radius: 4px;
+}
 
 #markdown code {
   background-color: #f6f8fa;
@@ -68,4 +68,25 @@ code, kbd, pre, samp {
   height: 1px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+#markdown table {
+  border-spacing: 0;
+  border-collapse: collapse;
+  margin: 16px 0;
+}
+
+#markdown table tr {
+  background-color: #fff;
+  border: none;
+  border-top: 1px solid #c6cbd1;
+}
+
+#markdown table td, #markdown table th {
+  border: 1px solid #dfe2e5;
+  padding: 6px 13px;
+}
+
+#markdown table tr:nth-child(2n) {
+  background-color: #f6f8fa;
 }
