--- a/src/components/MarkdownIt.css
+++ b/src/components/MarkdownIt.css
@@ -1,7 +1,11 @@
+* {
+     box-sizing: border-box;
+}
 #markdown {
   font-family: "Fira Code", "Helvetica Neue", Helvetica, "PingFang SC",
   "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
   font-size: 16px;
+  line-height: 1.5;
 }
 
 code, kbd, pre, samp {
@@ -89,4 +93,8 @@ code, kbd, pre, samp {
 
 #markdown table tr:nth-child(2n) {
   background-color: #f6f8fa;
+}
+
+#markdown ol, #markdown ul {
+    padding-left: 2em;
 }
