--- a/src/components/MarkdownIt.css
+++ b/src/components/MarkdownIt.css
@@ -103,3 +103,9 @@ code, kbd, pre, samp {
 #markdown img {
   max-width: 100%;
 }
+
+#markdown blockquote {
+  border-left: .25em solid #dfe2e5;
+  color: #6a737d;
+  padding: 0 1em;
+}
